playbooks/kubernetes/manifests/traefik-dashboard-ingressroute.yml
# Traefik k8s CRD IngressRoute to the Traefik Dashboard
#
# Defines an Ingress route to the traefik dashboard exposed on "{domain}.traefik"
# and/or the path "/dashboard/" (note the trailing slash)
#
# see https://doc.traefik.io/traefik/operations/api/#dashboard
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp(`{subdomain:[a-z]+.traefik}`) || PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
